@@ -89,12 +89,28 @@ True
 >>> len(tokens)
 2
 
+When registering documents we need to know whether an object has already been
+registered with VGWort or not. Since the DAV-Server cannot query for the
+non-existence of properties, we initialize them with empty values:
+
+>>> reginfo = zeit.vgwort.interfaces.IRegistrationInfo(content)
+>>> print reginfo.registered_on
+None
+>>> reginfo.register_error
+u''
+>>> reginfo.register_error = u'foo'
+
+
 Publishing the same object again does not assign a new token:
 
 >>> zope.event.notify(zeit.cms.workflow.interfaces.BeforePublishEvent(
 ...     content, content))
 >>> len(tokens)
 2
+
+>>> reginfo.register_error
+u'foo'
+
 
 Tokens are only assigned for the master object of the event:
 
